# kickjump_old

./: .gitignore  .npmrc  Anchor.toml  Cargo.toml  LICENSE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  rust-toolchain.toml  tsconfig.json  vercel.json
.changeset/: config.json  little-socks-complain.md  nasty-lemons-rule.md  shaggy-needles-clean.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  deployment.yml  publish.yml
.monots/: .pnpmfile.cjs  delete-changset-changelog-property.ts  fix-prisma.ts  helpers.ts  tsconfig.base.json  tsconfig.lint.json
.monots/patches/: @project-serum__anchor@0.25.0.patch  @remix-run+dev+^1.1.3.patch  @remix-run+serve+^1.1.3.patch  @sveltejs__kit@1.0.0-next.370.patch  eslint-config-monots@0.11.1.patch  fast-sort@3.2.0.patch  vite@3.0.0.patch  vitest@0.18.1.patch
.monots/scripts/: changelog-dates.ts  delete-changeset-property.ts  fix-audit.ts  fix-prisma.ts  helpers.ts  install-edgedb.ts  package.json  patch-packages.ts  setup-anchor.ts  symlink-root.js
.monots/symlink/: .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .lintstagedrc  .prettierrc.cjs  Dockerfile  docker-compose.yml  fly.toml  playwright.config.ts  postcss.config.cjs  rust-toolchain.toml  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
apps/_kickjump.com/: package.json  tsconfig.json
crates/db/: Cargo.toml
crates/db/src/: lib.rs  prisma.rs
crates/oauth2/: Cargo.toml
crates/oauth2/src/: main.rs
crates/oauth2/src/support/: client.rs  generic.rs  mod.rs
programs/solana_credentials/: Cargo.toml
programs/solana_credentials/src/: lib.rs
tests/: anchor.config.ts  db.config.ts  octocat.json  octocatState.json  package.json  playwright.config.ts  readme.md  tsconfig.json  web.config.ts
tests/db/: db.test.ts  (+3 more)
website/: README.md  package.json  playwright.config.ts  remix.config.js  tsconfig.json
(+466 files in other folders)
