[package]
name = "db"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.4.0" }
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.2", features = ["macros"] }
