[package]
name = "kickjump_oauth2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "^0.12.0"
actix-web = "^4.0.1"
env_logger = "^0.9.0"
futures = "^0.3.21"
oxide-auth = "^0.5.1"
oxide-auth-actix = "^0.2.0"
oxide-auth-db = "0.1.0"
reqwest = "=0.9.5"
serde = "^1.0.136"
serde_json = "^1.0.79"
url = "^2.2.2"
serde_urlencoded = "^0.7.1"
dotenv = "0.15.0"
db = { path = "../db" }
