[package]
name = "solana_credentials"
version = "0.0.0"
description = "Manage wallet specific credentials"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_credentials"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.23.0"
